# AK_LAB3

./: CMakeLists.txt  Lab3  Makefile  README.md
src/: library.c  library.h  main.c
